--- a/frontend/web/package.json
+++ b/frontend/web/package.json
@@ -7,14 +7,17 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
+    "@types/js-cookie": "^2.2.6",
     "@types/node": "^12.12.62",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
+    "@types/react-animations ": "^1.0.0",
     "framer-motion": "^2.9.1",
+    "js-cookie": "^2.2.1",
     "react": "^16.13.1",
-    "react-animations": "^1.0.0",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-scripts": "3.4.3",
@@ -43,6 +46,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-typing-animation": "^1.6.2",
+    "react-animations": "^1.0.0",
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.0"
