--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.6",
     "sqlite3": "^5.0.0",
