--- a/web/package.json
+++ b/web/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "framer": "^1.2.9",
     "framer-motion": "^2.9.4"
   }
 }
